# minecraft-manager-mctl

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: code-check.yml  release.yml
mctl/: pyproject.toml
mctl/src/mctl/cli/: config.py  init.py  lifecycles.py  main.py  servers.py
mctl/src/mctl/core/: constants.py  exceptions.py  initialiser.py  interfaces.py
mctl/src/mctl/core/servers/: bootstrapper.py  configurator.py  installer.py  manager.py  registry.py
mctl/src/mctl/core/servers/types/: base.py  fabric.py  paper.py  purpur.py  vanilla.py
mctl/src/mctl/core/utils/: validators.py
